--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,12 @@
 
     .container {
       position: absolute;
-      width: 50px;
-      height: 50px;
-      left: calc(50% - 25px);
-      top: calc(50% - 25px);
+      width: 100px;
+      height: 100px;
+      left: calc(50% - 50px);
+      top: calc(50% - 50px);
       background: transparent url('/assets/logo-color.svg') center center no-repeat;
+      background-size: 100px 100px;
       z-index: 10002;
     }
   </style>
